--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>123bet 123b 123betting XỔ SỐ TRÒ CHƠI THỂ THAO Legal and Licensed in the US</title>
+    <title>ZIOPTO Insights into the Cryptocurrency Market</title>
+    <meta name="description" content="Explore the global cryptocurrency market with Bitcoinsblock, providing key exchange and coin data to help you make wise investment decisions."/>
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.png">
 	<meta name="description" content="123bet 123b 123betting THỂ THAO XỔ SỐ"/>
