--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>123bet 123b 123betting GAME SLOT XỔ SỐ TRÒ CHƠI THỂ THAO </title>
-	<meta name="description" content="ĐÁ GÀ THỂ THAO XỔ SỐ CASINO 123bet 123b 123betting "/>
+    <title>ZIOPTO Insights into the Cryptocurrency Market</title>
+    <meta name="description" content="Explore the global cryptocurrency market with Bitcoinsblock, providing key exchange and coin data to help you make wise investment decisions."/>
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.png">
 
